clusters/building-blocks/other/apps/whisper-money/app/whisper-money-deploy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper-money
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: whisper-money
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: whisper-money
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whisper-money
        app.kubernetes.io/component: app
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: main
          image: ghcr.io/whisper-money/whisper-money:production
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /app/storage
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /up
              port: http
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /up
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /up
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: whisper-money-storage-pvc
