clusters/building-blocks/other/apps/whisper-money/app/whisper-money-mysql-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: whisper-money-mysql
  namespace: default
  labels:
    app.kubernetes.io/name: whisper-money
    app.kubernetes.io/component: mysql
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: whisper-money
    app.kubernetes.io/component: mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: mysql
