clusters/building-blocks/other/apps/whisper-money/app/whisper-money-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: whisper-money
  namespace: default
  labels:
    app.kubernetes.io/name: whisper-money
spec:
  selector:
    app.kubernetes.io/name: whisper-money
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
