clusters/building-blocks/other/apps/whisper-money/app/whisper-money-ingressroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisper-money
  namespace: default
  labels:
    app.kubernetes.io/name: whisper-money
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`money.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: local-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: whisper-money
          namespace: default
          passHostHeader: true
          port: 80
          scheme: http
